plugins {
    id "java"
}

repositories {
    mavenCentral()
    maven { url "https://repo.gradle.org/gradle/libs-releases" } // for gradle-tooling-api
    flatDir { dirs mcreator_path + '/lib' }
    maven {
        url "https://jitpack.io"
    }
}

group = 'org.cdc.pluginmaker'
version = "1.7.10.2"

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

configurations {
    implementation.extendsFrom jarInJar
}

dependencies {
    implementation project(':MCreator')

    project(':MCreator').afterEvaluate(() ->
            project(":MCreator").configurations.named("implementation").get().dependencies.each {
                //noinspection ForeignDelegate
                implementation it
            }
    )
    compileOnly 'org.jetbrains:annotations:26.1.0'
//    jarInJar('com.github.javaparser:javaparser-symbol-solver-core:3.28.1'){
//        exclude group:'org.javassist'
//        exclude group:'com.google.guava'
//    }
}

configurations.jarInJar{
    canBeConsumed = true
    canBeResolved = true
}

tasks.jar {
    archiveFileName.set("plugin-generator-"+version+".zip")

    from(project.configurations.jarInJar) {
        into 'META-INF/jarinjar'
    }
}

tasks.register('runMCreatorWithPlugin', JavaExec) {
    dependsOn jar

    environment("MCREATOR_PLUGINS_FOLDER", file("./build/libs"))

    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'

    classpath = project(':MCreator').sourceSets.main.runtimeClasspath

    mainClass = 'net.mcreator.Launcher'

    workingDir = mcreator_path
}

subprojects { subproject ->
    subproject.plugins.withType(JavaPlugin).tap {
        configureEach {
            test {
                dependsOn rootProject.jar

                environment("MCREATOR_PLUGINS_FOLDER", new File(mcreator_path, "/build/libs"))

                workingDir = mcreator_path
            }
        }
    }
}